[gd_scene load_steps=6 format=3 uid="uid://tcsbdp84rias"]

[ext_resource type="Script" path="res://Scripts/OOP/Foraging/qte_minigame.gd" id="1_q4t3n"]
[ext_resource type="Theme" uid="uid://bcfxu54llfagk" path="res://Resources/foraging_theme.tres" id="2_k8p4n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.1, 0.9)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 50.0
direction = Vector3(0, -1, 0)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
gravity = Vector3(0, 98, 0)
scale_min = 2.0
scale_max = 4.0
color = Color(0.2, 0.8, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0.5)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="QTEMinigame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_k8p4n")
script = ExtResource("1_q4t3n")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="PromptContainer" type="CenterContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PromptLabel" type="Label" parent="Background/PromptContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "E"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SuccessParticles" type="GPUParticles2D" parent="Background"]
position = Vector2(200, 150)
emitting = false
amount = 30
process_material = SubResource("ParticleProcessMaterial_1")
lifetime = 0.5
one_shot = true
explosiveness = 0.8

[node name="ProgressBar" type="ProgressBar" parent="Background"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -40.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_2")
value = 100.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
